Fix build script for Polymer example (#940)

--- a/polymer/src/abe-polymer2-app.html
+++ b/polymer/src/abe-polymer2-app.html
@@ -151,7 +151,7 @@
           Polymer.RenderStatus.afterNextRender(this, () => {
               // Register service worker if supported.
               if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('service-worker.js', {scope: '/'});
+                navigator.serviceWorker.register('service-worker.js', {scope: '/polymer/'});
               }
               this._notifyNetworkStatus();
               this.loadComplete = true;
