--- a/polymer/index.html
+++ b/polymer/index.html
@@ -10,7 +10,7 @@
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
 
-    <script src="/polymer/node_modules/webcomponents.js/webcomponents.min.js"></script>
+    <script src="/polymer/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
     <link rel="import" href="/polymer/src/abe-polymer2-app.html">
   </head>
